--- a/draft/about.html
+++ b/draft/about.html
@@ -16,7 +16,7 @@
 </p>
 
 <p>
- My name is Cameron Reaves, a junior at Harvard College studying Environmental Science and Public Policy. I am interested in the intersection of policy, technology and the environment, specifically through the lens of sustainable urban development. I am planning on writing a senior thesis on how transportation policy impacted social and environmental outcomes for the city Atlanta, GA. 
+ My name is Cameron Reaves, a junior at Harvard College studying Environmental Science and Public Policy. I am interested in the intersection of policy, technology and the environment, specifically through the lens of sustainable urban development. I am planning on writing a senior thesis on how transportation policy shaped social and environmental outcomes in Atlanta, GA. 
 </p>
 
 <p> 
