this thing is looking sweeeeeeet

--- a/draft/about.html
+++ b/draft/about.html
@@ -8,13 +8,20 @@
 <body>
 <div style="background-color:#cfe8f3;padding:30px;">
 <p>
-  The idea for this project came about when I began researching how climate change would affect housing in the United States. I stumbled across a recently published article that used machine learning in combination with other migration models to predict net migration by county in the United States by 2100. 
+  The idea for this project came about when I began researching how climate change would affect housing in the United States. I stumbled across a recently published article that used machine learning in combination with other migration models to predict net migration by county in the United States by 2100. According to the paper, by the year 2100, a projected 13.1 million people in the United States alone would be living on land that will be considered flooded with a SLR of 6 feet (1.8). Using small area population projections, the NOAA’s Digital Coast Sea Level Rise estimates, and a machine learning (ML) method for modeling human migration, the researchers have shown that the effect of SLR on human populations could be more pervasive and widespread than anticipated, with almost all counties receiving some number of additional migrants due to SLR induced flooding. The areas immediately adjacent to coastal counties will experience the most dramatic impacts as many migrants will simply move slightly further inland. These counties are predominantly rural and may not have the infrastructure capacity to serve several times the number of average annual incoming migrants. (Caleb Robinson, Bistra Dilkina, and Juan Moreno-Cruz) 
 </p>
 
-<p>
+</div>
+
+<div>
+
+<p style="background-color:#f5cbdf;padding:30px;margin:20px;">
   I created this dashboard using the <a href="https://urbaninstitute.github.io/graphics-styleguide/">Urban Institute Data Visualization Style Guide</a> as well as the r packages urbanmapr and urbanthemes which are opensource. I think that they make this page look lovely. I also used shiny, the tidyverse, and gt packages for the web app, data manipulation and tables respectively. 
 </p>
 
+</div>
+
+<div style="background-color:#cfe8f3;padding:30px;">
 <p>
  My name is Cameron Reaves, a junior at Harvard College studying Environmental Science and Public Policy. I am interested in the intersection of policy, technology and the environment, specifically through the lens of sustainable urban development. I am planning on writing a senior thesis on how transportation policy shaped social and environmental outcomes in Atlanta, GA. 
 </p>
@@ -23,6 +30,8 @@
 Attached here is a link to my github account where you will be able to find this code. 
 
 Attached here is my linkedin and resume. 
+
+</div>
 </p>
 </div>
 </body>
