Began adding helper functions that clean and load the data

--- a/draft/about.html
+++ b/draft/about.html
@@ -15,7 +15,7 @@
 
 <div>
 
-<p style="background-color:#f5cbdf;padding:30px;margin:20px;">
+<p style="background-color:#f5cbdf;padding:30px;margin-top:20px;margin-bottom:20px;">
   I created this dashboard using the <a href="https://urbaninstitute.github.io/graphics-styleguide/">Urban Institute Data Visualization Style Guide</a> as well as the r packages urbanmapr and urbanthemes which are opensource. I think that they make this page look lovely. I also used shiny, the tidyverse, and gt packages for the web app, data manipulation and tables respectively. 
 </p>
 
